# cmake-example-project

./: CMakeLists.txt  CMakePresets.json  README.md
CMake/: linux-toolchain.cmake  windows-toolchain.cmake
docs/: CMake_explanations.md
src/: main.cpp
src/module1/: CMakeLists.txt  module1.cpp  module1.h
src/module2/: CMakeLists.txt  module2.cpp  module2.h
